# Workspace root (virtual — no [project] section)
# Exercises: workspace-exclusive dependency groups (uv 0.11.22)
# and marker-ordering-semantics via [tool.uv.constraint-dependencies].

[tool.uv.workspace]
members = ["packages/*"]

# Workspace-exclusive dependency groups (NOT exported to members).
# uv 0.11.22 changed discovery of these groups.
[dependency-groups]
integration = [
    "httpx>=0.27",
]
audit = [
    "pip-audit>=2.7",
]

# Marker-ordering-semantics probe: compound PEP 508 markers.
# These deps live at the workspace root level only.
# colorama: Windows-only, compound marker (sys_platform AND python_version)
# uvloop: non-Windows, compound marker (sys_platform OR with python_full_version)
[tool.uv]
dev-dependencies = [
    "requests>=2.31",
    "colorama>=0.4.6; sys_platform == 'win32' and python_version >= '3.11'",
    "uvloop>=0.19; (sys_platform == 'linux' or sys_platform == 'darwin') and python_full_version >= '3.11.0'",
]
