# Virtual workspace root — no [project] section.
# This is intentional: workspace-exclusive dependency groups live here
# and are NOT propagated to member packages (uv 0.11.22 feature).

[tool.uv.workspace]
members = ["packages/*"]

# Workspace-exclusive dependency groups (PEP 735).
# These groups exist ONLY at the workspace root; member packages
# do not declare or inherit them.
[dependency-groups]
integration = [
    "httpx>=0.27",
]
audit = [
    "pip-audit>=2.7",
]

[tool.uv]
# Ensure the workspace-root groups are not auto-synced into members.
# No dev-dependencies here — they go in [dependency-groups] above.
